[package]
name = "polones-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
sdl2 = "0.35.2"
polones-core = { path = "../polones-core" }
parking_lot = "0.12.1"
