[package]
name = "polones-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

polones-core = { path = "../polones-core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

# Fix missing function names in `--profiling` profile
# https://github.com/rustwasm/wasm-pack/issues/797
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O4', '-g']

# [profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"